--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -34,6 +34,10 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    steps:
+    steps: 
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Node build artifact
       - name: Deploy
         run: echo "Deploying..."
